Assignment3/.metadata/.plugins/org.eclipse.cdt.ui/que2.build.log
15:50:17 **** Incremental Build of configuration Debug for project que2 ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'led_off':
../Src/main.c:24:15: error: called object is not a function or function pointer
   24 | #define BV(n) (1 << (n))
      |               ^
../Src/main.c:68:25: note: in expansion of macro 'BV'
   68 |         GPIOD->ODR &= ~(BV(13)  BV(15));
      |                         ^~
make: *** [Src/subdir.mk:31: Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

15:50:17 Build Failed. 2 errors, 0 warnings. (took 266ms)

